--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             아래 '내 최애' 글자를 여러분이 좋아하는 아이돌이나 친구 이름으로 바꿔보세요! 
             예: 차은우, 뉴진스, 3학년 5반 이쁜이
         -->
-        <h1 id="targetName" class="text-4xl text-pink-600 drop-shadow-md mb-2">내 최애</h1>
+        <h1 id="targetName" class="text-4xl text-pink-600 drop-shadow-md mb-2">네잎클로버>네잎>>
         
         <p class="text-gray-600 text-lg mb-8">에게 하트를 보내주세요! 💖</p>
 
@@ -99,7 +99,7 @@
         여러분의 이름이나 닉네임을 적어보세요.
     -->
     <div class="absolute bottom-4 text-gray-500 text-xs text-center w-full">
-        Made with Love by <span class="font-bold text-pink-500">익명의 팬</span>
+        Made with Love by <span class="font-bold text-pink-500">푸른 곰>푸른>푸른>
     </div>
 
     <script>
@@ -179,4 +179,5 @@
 
     </script>
 </body>
+
 </html>
